--- a/eda.Rmd
+++ b/eda.Rmd
@@ -677,20 +677,25 @@ ggplot(master_df_k, aes(x = cluster10, y = literacy, fill = cluster10)) +
 ```
 
 ```{r}
-ggplot(master_df_h[!is.na(master_df_h$GDP), ], aes(x = cluster10, y = GDP, fill = cluster10)) +
+ggplot(master_df_h[!is.na(master_df_h$GDP), ], aes(x = cluster10, y = log(GDP), fill = 
+                                                     cluster10)) +
   geom_boxplot(alpha = 0.3) +
   geom_point(aes(color = cluster10, group = cluster10), position = position_dodge(width=0.75)) +
   geom_text(aes(group = cluster10, 
-                label = ifelse(test = GDP > median(GDP) + 1.5*IQR(GDP)
-                               | GDP < median(GDP) - 1.5*IQR(GDP), 
+                label = ifelse(test = log(GDP) > median(log(GDP)) + 1.5*IQR(log(GDP))
+                               | log(GDP) < median(log(GDP)) - 1.5*IQR(log(GDP)), 
                   yes = ISO3,
                   no = '')), 
             position = position_dodge(width=0.75),
             hjust = "left", size = 3)
+
+# ggrepel
+# deal with missing data
 ```
 
 ```{r}
-ggplot(master_df_k, aes(x = cluster10, y = Expectancy, fill = cluster10)) +
+ggplot(master_df_k[!is.na(master_df_k$Expectancy), ], 
+       aes(x = cluster10, y = Expectancy, fill = cluster10)) +
   geom_boxplot(alpha = 0.3) +
   geom_point(aes(color = cluster10, group = cluster10), position = position_dodge(width=0.75)) +
   geom_text(aes(group = cluster10, 
@@ -711,25 +716,24 @@ for (i in 1:10) {
 ```
 
 ```{r}
+#appendix (use xtable to format into Latex)
+# kableExtra
 for (i in 1:10) {
-  print(master_df_h[master_df_k$cluster10 == i, ]$ISO3)
+  print(master_df_k[master_df_k$cluster10 == i, ]$ISO3)
 }
 ```
-
-questions:
-
-- whether PCA from 5 to 2 variables is interpretable/useful in the first place -- can just choose a few sets of two variables that are interesting
-- thinking of using Rand index to compare clustering: https://en.wikipedia.org/wiki/Rand_index (continent, development level)
-- do I have enough? should I be 
-- motivating the problem -- making sure I'm not just saying that it's interesting ``to me"
-- don't have all the results yet, and even if I do, am afraid they are not meaningful enough
-- end with what surprised
-
 
 
 FINAL OFFICE HOURS:
 - moving the tables in the data section to the appendix?
 - standardized or original data summary statistics in the table? both?
 - telling a meaningful story with the scatter plot?
+- difficult drawing general conclusions -- don't seem like I have a ton of meaningful results :( -- or are there ways to find general, practical results that don't involve scoring / evaluating the different policies on ``strictness?''
+
+
+
+- classification tree, multinomial 
+- top two principal components, color code (or focusing on two variables of interest)
+
 
 
